[gd_scene load_steps=27 format=3 uid="uid://05dpq3ap104a"]

[ext_resource type="Script" path="res://scripts/teo_snorbest.gd" id="1_emse2"]
[ext_resource type="Texture2D" uid="uid://df2afjahji5vm" path="res://graphics/player_spritesheet.png" id="2_31wwi"]
[ext_resource type="Script" path="res://scripts/weapon.gd" id="4_8kpb4"]
[ext_resource type="PackedScene" uid="uid://dwyimwayasbsm" path="res://scenes/Sword.tscn" id="5_jre45"]
[ext_resource type="Script" path="res://UI/kill_states.gd" id="5_l8oeq"]
[ext_resource type="PackedScene" uid="uid://d1kd5lf3arv2d" path="res://scenes/hearts_container.tscn" id="6_jbgf7"]
[ext_resource type="AudioStream" uid="uid://u1bry7slt43" path="res://sounds/FootStep.wav" id="7_rrc68"]
[ext_resource type="AudioStream" uid="uid://cnbbo63xb68jc" path="res://sounds/Damage.wav" id="8_rqivi"]
[ext_resource type="AudioStream" uid="uid://bcnyc1qjkgbp2" path="res://sounds/Heal.wav" id="9_oob6t"]
[ext_resource type="AudioStream" uid="uid://cggm411cajktg" path="res://sounds/Sword.wav" id="10_pa2ln"]
[ext_resource type="AudioStream" uid="uid://bffcej12m2coy" path="res://sounds/Coin.wav" id="11_dvd3h"]

[sub_resource type="Animation" id="Animation_35tfx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.44346]
}

[sub_resource type="Animation" id="Animation_f7ags"]
resource_name = "attackDown"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(9, -27), Vector2(2, -25), Vector2(7, -27)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.44346, 3.14159, 3.83972]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_0obej"]
resource_name = "attackLeft"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-7, -40), Vector2(-11, -28), Vector2(-7, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.0472, -1.5708, -2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_pkriq"]
resource_name = "attackRight"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(9, -40), Vector2(13, -28), Vector2(9, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0472, 1.5708, 2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_djew0"]
resource_name = "attackUp"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-7, -40), Vector2(2, -38), Vector2(9, -40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.698132, 0.0, 0.698132]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_f8f3v"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}

[sub_resource type="Animation" id="Animation_05t35"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}

[sub_resource type="Animation" id="Animation_uelqm"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}

[sub_resource type="Animation" id="Animation_2hi0g"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajfri"]
_data = {
"RESET": SubResource("Animation_35tfx"),
"attackDown": SubResource("Animation_f7ags"),
"attackLeft": SubResource("Animation_0obej"),
"attackRight": SubResource("Animation_pkriq"),
"attackUp": SubResource("Animation_djew0"),
"walkDown": SubResource("Animation_f8f3v"),
"walkLeft": SubResource("Animation_05t35"),
"walkRight": SubResource("Animation_uelqm"),
"walkUp": SubResource("Animation_2hi0g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cg456"]
size = Vector2(18, 49)

[sub_resource type="Animation" id="Animation_el025"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c6p5x"]
resource_name = "hurtBlink"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.635294), Color(1, 1, 1, 0.670588), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qfa7"]
_data = {
"RESET": SubResource("Animation_el025"),
"hurtBlink": SubResource("Animation_c6p5x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwppi"]
size = Vector2(27, 17.5)

[node name="Teo_Snorbest" type="CharacterBody2D"]
script = ExtResource("1_emse2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.997028, 0.995798)
texture = ExtResource("2_31wwi")
offset = Vector2(0, -31)
hframes = 4
vframes = 5

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
anchors_preset = -1
anchor_left = 0.344152
anchor_top = 0.0510281
anchor_right = 0.657152
anchor_bottom = 0.988153
offset_left = -32.0257
offset_top = -63.2658
offset_right = -32.0577
offset_bottom = -63.2418
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ajfri")
}

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, -35)
shape = SubResource("RectangleShape2D_cg456")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0qfa7")
}

[node name="hurtTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Player_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.75)
shape = SubResource("RectangleShape2D_vwppi")

[node name="weapon" type="Node2D" parent="."]
position = Vector2(9, -27)
rotation = 2.44346
script = ExtResource("4_8kpb4")

[node name="sword" parent="weapon" instance=ExtResource("5_jre45")]
position = Vector2(-0.167001, -26.2483)

[node name="killStates" type="Label" parent="."]
offset_left = -184.0
offset_top = -102.0
offset_right = -144.0
offset_bottom = -79.0
script = ExtResource("5_l8oeq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="heartsContainer" parent="CanvasLayer" instance=ExtResource("6_jbgf7")]
layout_direction = 3

[node name="footStepsAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_rrc68")

[node name="stepTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="damageAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_rqivi")
volume_db = -10.0

[node name="healAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_oob6t")

[node name="attackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_pa2ln")

[node name="coinAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_dvd3h")

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="timeout" from="stepTimer" to="." method="_on_step_timer_timeout"]
